--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "elysia": "latest",
     "eslint-config-codely": "^4.2.0",
     "pino": "^9.5.0",
