--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
+    "dotenv": "^16.4.5",
     "elysia": "latest",
     "eslint-config-codely": "^4.2.0",
     "pino": "^9.5.0",
