--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@elysiajs/bearer": "^1.1.2",
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
