chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 SENDGRID_FROM_EMAIL=
 SENDGRID_TEMPLATE_ID=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_HOST=
+POSTGRES_PORT=
+JWT_SECRET=
+JWT_ISSUER=
