--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.13.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
+    "resend": "4.1.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
