--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "elysia": "latest",
-    "eslint-config-codely": "^4.2.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
@@ -31,12 +30,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.27.0",
     "@faker-js/faker": "^9.2.0",
     "@types/jsonwebtoken": "^9.0.7",
     "bun-types": "latest",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "husky": "^9.1.6",
     "install": "^0.13.0",
-    "lint-staged": "^15.2.10"
+    "lint-staged": "^15.2.10",
+    "typescript-eslint": "^8.32.1"
   },
   "module": "src/index.js",
   "lint-staged": {
