test: configure test environment and setup
- add .env.test file with test environment variables
- update test scripts to use setup file
- create test setup for environment configuration
- reorganize test imports

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.50",
   "type": "module",
   "scripts": {
-    "test": "bun test",
-    "test:coverage": "bun test --coverage",
+    "test": "bun test --setup=test/setup.ts",
+    "test:coverage": "bun test --setup=test/setup.ts --coverage",
     "dev": "bun run --watch src/index.ts",
     "lint": "eslint --ignore-pattern .gitignore .",
     "lint:fix": "bun run lint -- --fix",
