--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,13 +24,13 @@ jobs:
           node-version: 22
 
       - name: Install dependencies
-        run: npm ci
+      - run: bun install
 
       - name: Lint
         run: npm run lint
 
       - name: Build
-        run: npm run build
+      - run: bun run build
 
       - name: Test
         run: npm test
