--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,36 +1,34 @@
-name: PR Pipeline
+name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: [main]
   pull_request:
-    branches: ['main']
+    branches: [main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          submodules: true
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Update submodules
-        run: git submodule update --init --recursive
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
 
       - name: Install dependencies
-      - run: bun install
+        run: bun install
 
       - name: Lint
-        run: npm run lint
+        run: bun run lint
 
+      - name: Copy .env.test
+        run: cp .env.test .env
+
+      - name: Run tests
+        run: bun test --setup=test/setup.ts
+
+      # Optional: Build step
       - name: Build
-      - run: bun run build
-
-      - name: Test
-        run: npm test
+        run: bun run build
