--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,7 +30,7 @@ jobs:
         run: cp .env.test .env
 
       - name: Run tests
-        run: bun test --setup=test/setup.ts
+        run: bun test --setup=test/setup.ts --runInBand
 
       # Optional: Build step
       - name: Build
