--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@elysiajs/bearer": "^1.1.2",
-    "@elysiajs/cors": "^1.1.1",
-    "@elysiajs/swagger": "^1.1.5",
-    "@sendgrid/mail": "^8.1.4",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "elysia": "latest",
-    "jest-mock-extended": "^4.0.0-beta1",
+    "@elysiajs/bearer": "^1.4.1",
+    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/swagger": "^1.3.1",
+    "@sendgrid/mail": "^8.1.6",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "elysia": "^1.4.13",
+    "jest-mock-extended": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0",
-    "resend": "4.1.2",
-    "typeorm": "^0.3.20"
+    "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
+    "resend": "6.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.27.0",
-    "@faker-js/faker": "^9.2.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "bun-types": "latest",
-    "eslint": "^9.27.0",
-    "globals": "^16.1.0",
-    "husky": "^9.1.6",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.38.0",
+    "@faker-js/faker": "^10.1.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bun-types": "^1.3.1",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
     "install": "^0.13.0",
-    "lint-staged": "^15.2.10",
-    "typescript-eslint": "^8.32.1"
+    "lint-staged": "^16.2.6",
+    "typescript-eslint": "^8.46.2"
   },
   "module": "src/index.js",
   "lint-staged": {
