--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ JWT_ISSUER=
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=
 SEASON=
+TOURNAMENTS_API_URL=http://localhost:3000
+TOURNAMENTS_WEBHOOK_URL=http://localhost:3001/api/v1/lightning-tournaments/webhook
