feat: add ADMIN role protection and banlist metadata
- Add bearer auth and ADMIN role checks to tournament endpoints
- Restrict tournament creation to ADMIN users only
- Restrict bracket generation to ADMIN users only
- Restrict match result recording to ADMIN users only
- Add optional banlist field for format identification
  (e.g., Edison, TCG, OCG)
- Banlist stored in tournament metadata
- Inject JWT dependency into TournamentsProxyController
- Update routers to pass JWT instance to controllers

BREAKING CHANGE: Tournament creation, bracket generation,
and match result recording now require ADMIN role

--- a/.env.test
+++ b/.env.test
@@ -10,4 +10,7 @@ JWT_SECRET=JWT_SECRET
 JWT_ISSUER=JWT_ISSUER
 RESEND_API_KEY=RESEND_API_KEY
 RESEND_FROM_EMAIL=RESEND_FROM_EMAIL
-SEASON=SEASON
+SEASON=5
+PORT=3001
+TOURNAMENTS_API_URL=http://localhost:3000
+TOURNAMENTS_WEBHOOK_URL=http://localhost:3001/api/v1/lightning-tournaments/webhook
